# UNED_CyAdD

./: .gitignore  README.md
Final_Project/pythonProject/: Strava_summary.ipynb
Final_Project/pythonProject/Figures/: startend_H3_map_res_11_labels.html  startend_H3_map_res_12_labels.html  startend_H3_map_res_13_labels.html  startend_H3_map_res_14_labels.html
Final_Project/scripts/: Analysis_general.mlx  GPX_Analysis.mlx  pyproject.toml
Reference_Book/Week_02/Week_02/: hypothesis_contrast.mlx  popular_datasets.mlx  stat_methods.mlx
Reference_Book/Week_03/Week_03/: 01_income_dataset_study.mlx  02_regression_commands.mlx  03_artificial_models_diagnosis_tests.mlx
Reference_Book/Week_04/Week_04/: 01_logistic_curve.mlx  02_churn_dataset_logistic_analysis.mlx
Reference_Book/Week_05/Week_05/: 01_grades_dataset.mlx  02_generate_data_for_cluster_test.mlx  03_hierarchical_clustering.mlx
Reference_Book/Week_06/Week_06/: 01_generate_rules.mlx  02_generate_rules.mlx  aprioriGen.m  findFreqItemsets.m  generateRules.m  groceries.mat  lift_leverage.mlx
Tareas/Task_1/para_entregar/: Ex1_anova_test.mlx  Ex4_ROC_curve_churn.mlx
Tareas/Task_1/scripts/: multivar_regression.mlx  poly_regression.mlx
Tareas/Task_2/scripts/: 2_1_Iris_dataset_study.mlx  2_2_diamonds_dataset.mlx  colormap_graded.m
Tareas/Task_3/scripts/: Bank_churn.mlx  accuracy.m  precission.m  recall.m
Tasks/Task_1/para_entregar/: Ex2_poly_regression.mlx  Ex3_multivar_regression.mlx  Ex4_ROC_curve__random.mlx
Tasks/Task_1/scripts/: ROC_curve.mlx  (+2 more)
Tests/Tests/: Test_1.mlx  Test_2.mlx  Test_3.mlx
(+2 files in other folders)
