[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.0"
pandas = "^1.0"
jupyter = "^1.0"
matplotlib = "^3.0"
h3 = "^3.0"
osmnx = "^1.2"
folium = "^0.12"
selenium = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
